fix camera on ios safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,17 +129,17 @@ aside p img{
   width: 320px;
   height: 650px;
   background-image: url("../images/painting.jpg");
-  margin: 15.4em auto 0;
+  margin: 0 auto;
   border: 1px solid #3a3a3a;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
 }
-
+/*
 .adjMargTop{
   margin-top: 3.1em;
-}
+} */
 
 
 .expand-enter, .expand-leave-to{
@@ -171,7 +171,7 @@ aside p img{
 
 
 .userpic{
-  margin: 1em auto;
+  margin: 1em auto 0;
   /* width: 200px;
   height: 150px; */
   background-color: #80000f;
